--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,6 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "baseHref": "/",
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -39,6 +38,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/frontend-challenge/",
               "budgets": [
                 {
                   "type": "initial",
@@ -54,6 +54,7 @@
               "outputHashing": "all"
             },
             "development": {
+              "baseHref": "/",
               "buildOptimizer": false,
               "optimization": false,
               "vendorChunk": true,
